# routes/producers.js
@@ -2,10 +2,10 @@ var express = require('express');
 var router = express.Router();
 const Joi = require('joi');
 const producerService = require('../services/producers');
-const RegionDAO = require('../services/regions');
+const RegionService = require('../services/regions');
 const { removeUndefined } = require('../util/validate')
 // CRUD
-router.post('/', function(req, res, next) {
+router.post('/', async function(req, res, next) {
     res.setHeader('Content-Type', 'application/json');
     const producer = Joi.object().keys({ 
         name: Joi.string().required(),
@@ -18,9 +18,9 @@ router.post('/', function(req, res, next) {
     const { error } = result; 
     const valid = error == null; 
     if (valid) { 
-        const is_region = RegionDAO.getRegionById(region_id);
+        const is_region = await RegionService.getRegionById(region_id);
         if(is_region.length > 0){
-            const create_producer = producerService.create(name, address, region_id)
+            const create_producer = await producerService.create(name, address, region_id)
             if(create_producer.length > 0){
                 return res.status(201).json({success: true, producer: create_producer[0]})
             }else{
@@ -35,7 +35,7 @@ router.post('/', function(req, res, next) {
 });
 
 
-router.get('/:id', function(req, res, next) {
+router.get('/:id', async function(req, res, next) {
     res.setHeader('Content-Type', 'application/json');
     const producer = Joi.object().keys({ 
         id: Joi.number().integer(),
@@ -46,7 +46,7 @@ router.get('/:id', function(req, res, next) {
     const { error } = result; 
     const valid = error == null; 
     if (valid) { 
-        const producer = producerService.getProducerById(id);
+        const producer = await producerService.getProducerById(id);
         if(producer.length > 0){
             
             return res.status(200).json({success: true, producer: producer[0]})
@@ -59,14 +59,14 @@ router.get('/:id', function(req, res, next) {
     }
 });
 
-router.get('/', function(req, res, next) {
+router.get('/', async function(req, res, next) {
     res.setHeader('Content-Type', 'application/json');
-    const producers = producerService.getProducers();
+    const producers = await producerService.getProducers();
     if (producers) return res.status(200).json({success: true, producers: producers})
     else res.status(500).json({success: false, message: 'An internal error'})
 });
 
-router.put('/:id', function(req, res, next) {
+router.put('/:id', async function(req, res, next) {
     res.setHeader('Content-Type', 'application/json');
     const producer = Joi.object().keys({
         id: Joi.number().integer().required(),
@@ -82,7 +82,7 @@ router.put('/:id', function(req, res, next) {
     const valid = error == null; 
     if (valid) {
         
-        const is_producer = producerService.getProducerById(id);
+        const is_producer = await producerService.getProducerById(id);
         if (is_producer.length <= 0){
             return res.status(400).json({success: false, message: 'Producer does not exist'})
         }
@@ -92,12 +92,12 @@ router.put('/:id', function(req, res, next) {
             return res.status(400).json({success: false, message: 'Prodide data to update'})
         }
 
-        const is_region = RegionDAO.getRegionById(region_id);
+        const is_region = await RegionService.getRegionById(region_id);
         if(is_region.length <= 0){
             return res.status(400).json({success: false, message: 'Region does not exist'})
         }
         
-        const update_producer = producerService.updateProducer(updateData, id)
+        const update_producer = await producerService.updateProducer(updateData, id)
         if(update_producer.length > 0){
             return res.status(201).json({success: true, producer: create_producer[0]})
         }else{
@@ -110,7 +110,7 @@ router.put('/:id', function(req, res, next) {
     }
 });
 
-// router.delete('/producer:id', function(req, res, next) {
+// router.delete('/producer:id', async function(req, res, next) {
 //     const producer = Joi.object().keys({ 
 //         name: Joi.string().required(),
 //         address: Joi.string().required(), 
